SqlReaderがMyBatis専用なので一旦リネーム。そのうち戻したい。
パラメタをSqlSourcesからSourcesに変更