@@ -4,7 +4,8 @@ import org.dddjava.jig.domain.model.data.classes.rdbaccess.MyBatisStatement;
 import org.dddjava.jig.domain.model.data.classes.rdbaccess.MyBatisStatementId;
 import org.dddjava.jig.domain.model.data.classes.rdbaccess.MyBatisStatements;
 import org.dddjava.jig.domain.model.data.classes.rdbaccess.SqlType;
-import org.dddjava.jig.domain.model.sources.mybatis.SqlSources;
+import org.dddjava.jig.domain.model.sources.Sources;
+import org.dddjava.jig.domain.model.sources.classsources.ClassSources;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.Arguments;
@@ -13,7 +14,6 @@ import stub.infrastructure.datasource.CanonicalMapper;
 import stub.infrastructure.datasource.SampleMapper;
 import testing.TestSupport;
 
-import java.util.Collections;
 import java.util.List;
 import java.util.stream.Stream;
 
@@ -23,11 +23,10 @@ class MyBatisMyBatisStatementReaderTest {
 
     @Test
     void bindを使ってても解析できる() {
-        MyBatisSqlReader sut = new MyBatisSqlReader();
+        MyBatisMyBatisStatementsReader sut = new MyBatisMyBatisStatementsReader();
 
-        MyBatisStatements myBatisStatements = sut.readFrom(new SqlSources(
-                TestSupport.getRawSourceLocations(),
-                List.of(TestSupport.getClassSource(SampleMapper.class))));
+        MyBatisStatements myBatisStatements = sut.readFrom(
+                new Sources(TestSupport.getRawSourceLocations(), null, new ClassSources(List.of(TestSupport.getClassSource(SampleMapper.class)))));
 
         MyBatisStatement myBatisStatement = myBatisStatements.list().get(0);
         assertEquals("[fuga]", myBatisStatement.tables().asText());
@@ -36,11 +35,10 @@ class MyBatisMyBatisStatementReaderTest {
     @ParameterizedTest
     @MethodSource
     void 標準的なパターン(String methodName, String tableName, SqlType sqlType) {
-        MyBatisSqlReader sut = new MyBatisSqlReader();
+        MyBatisMyBatisStatementsReader sut = new MyBatisMyBatisStatementsReader();
 
-        MyBatisStatements myBatisStatements = sut.readFrom(new SqlSources(
-                TestSupport.getRawSourceLocations(),
-                Collections.singletonList(TestSupport.getClassSource(CanonicalMapper.class))));
+        MyBatisStatements myBatisStatements = sut.readFrom(
+                new Sources(TestSupport.getRawSourceLocations(), null, new ClassSources(List.of(TestSupport.getClassSource(CanonicalMapper.class)))));
 
         MyBatisStatement myBatisStatement = myBatisStatements.list().stream()
                 .filter(current -> current.identifier().equals(new MyBatisStatementId("stub.infrastructure.datasource.CanonicalMapper." + methodName)))
